# Lesson_11.2-practic-

./: README.md  pyproject.toml
src/: logging.py  memoize.py  palindrom.py  positive.py
